<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>adapted_move_base</name>
    <version>1.0.0</version>
    <description>

        The move_base package provides an implementation of an action (see the <a href="http://www.ros.org/wiki/actionlib">actionlib</a> package) that, given a goal in the world, will attempt to reach it with a mobile base. The move_base node links together a global and local planner to accomplish its global navigation task. It supports any global planner adhering to the nav_core::BaseGlobalPlanner interface specified in the <a href="http://www.ros.org/wiki/nav_core">nav_core</a> package and any local planner adhering to the nav_core::BaseLocalPlanner interface specified in the <a href="http://www.ros.org/wiki/nav_core">nav_core</a> package. The move_base node also maintains two costmaps, one for the global planner, and one for a local planner (see the <a href="http://www.ros.org/wiki/costmap_2d">costmap_2d</a> package) that are used to accomplish navigation tasks.
This is a modified version that allows to either use the costmaps or not, in case that the planner do not use them. That is indicated through the parameters use_global_costmap2d and use_local_costmap2d.

    </description>
    <author>Noé Pérez-Higueras</author>
    <maintainer email="noe.perez@uc3m.com">Noé Pérez-Higueras</maintainer>
    <license>BSD</license>
    <url>http://github.com/noeperez/indires_navigation</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>actionlib</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>move_base_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <depend>base_local_planner</depend>
    <depend>clear_costmap_recovery</depend>
    <depend>navfn</depend>
    <depend>rotate_recovery</depend>
	<depend>global_rrt_planners</depend>

    <exec_depend>message_runtime</exec_depend>

</package>
