<package>
  <name>global_rrt_planner</name>
  <version>1.0.0</version>
  <description>
     A plugin to use the 3D RRT planners library in the ROS move_base.
  </description>
  <maintainer email="noe.perez@uc3m.com">Noé Pérez-Higueras</maintainer>
  <license>BSD</license>

  <author>Noé Pérez-Higueras</author>
  <url>http://github.com/noeperez/indires_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>rrt_planners</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rrt_planners</run_depend>

  <export>
      <nav_core plugin="${prefix}/bgrrt_plugin.xml" />
  </export>

</package>
